[project]
name = "jwt-fastapi"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "HayatoKTYM" }
]
dependencies = [
    "fastapi>=0.103.1",
    "uvicorn>=0.23.2",
    "pydantic>=2.3.0",
    "pyjwt>=2.8.0",
    "jinja2>=3.1.2",
    "python-multipart>=0.0.6",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
